deploy/variant-kubernetes/option-kubectl/postgres-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: metaphotor
  labels:
    name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      service: postgresql
  template:
    metadata:
      labels:
        service: postgresql
    spec:
      containers:
      - name: postgresql
        image: postgres:12-alpine
        volumeMounts:
          - name: postgres-volume-mount
            mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-volume-mount
        persistentVolumeClaim:
          claimName: postgres-pvc
      restartPolicy: Always
