deploy/variant-kubernetes/option-kubectl/flask-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: flask
  namespace: metaphotor
  labels:
    service: flask
spec:
  selector:
    app: flask
  ports:
  - port: 5000
    targetPort: 5000
