deploy/variant-kubernetes/option-kubectl/nginx-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: metaphotor
  labels:
    service: nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31457
