deploy/variant-kubernetes/option-kubectl/kube-ing.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kube-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  rules:
  - host: metaphotor.info
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
      - path: /
        backend:
          serviceName: flask
          servicePort: 5000
